--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,11 +1,20 @@
 body {
 	background-color: #b7d1c4
 }
-h2 {
+h1 {
 	font-family: Verdana;
 	font-weight: bold;
 	text-align: center;
 	padding-top: 25px;
 	padding-bottom: 25px;
 	color: #acd1b2;
+}
+p {	font-family: Verdana;
+	font-weight: bold;
+	text-align: center;
+	padding-top: 25px;
+	padding-bottom: 25px;
+	color: #acd1b2;
+
+	
 }
