--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -7,12 +7,12 @@ h1 {
 	text-align: center;
 	padding-top: 25px;
 	padding-bottom: 25px;
-	color: #acd1b2;
+	color: black;
 }
 p {	font-family: Verdana;
 	font-weight: bold;
 	text-align: center;
 	padding-top: 25px;
 	padding-bottom: 25px;
-	color: #acd1b2;
+	color: black;
 }
