--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -18,7 +18,7 @@ h3 {
 }
 }
 p {	font-family: Arial;
-	text-align: center;
+	text-align: justify;;
 	padding-top: 25px;
 	padding-bottom: 25px;
 	color: black;
