--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8,6 +8,7 @@ h1 {
 	padding-top: 25px;
 	padding-bottom: 25px;
 	color: black;
+	text-decoration: underline;
 }
 h3 {
 	font-family: Verdana;
@@ -15,6 +16,8 @@ h3 {
 	color: black;
 	padding-top: 25px;
 	padding-bottom: 25px;
+	text-decoration: underline;
+	margin-bottom: 0;
 }
 }
 p {	font-family: Arial;
