--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -18,10 +18,14 @@ h3 {
 	padding-bottom: 25px;
 	text-decoration: underline;
 	margin-bottom: 0;
+	
 }
 }
 p {	font-family: Arial;
 	text-align: justify;;
 	color: black;
-	margin-top: 0; 
+	margin-top: 0; 	
+	padding-top: 25px;
+	padding-bottom: 25px;
+	margin: 30px;
 }
