--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -20,7 +20,6 @@ h3 {
 	margin-bottom: 0;
 	
 }
-}
 p {	font-family: Arial;
 	text-align: justify;;
 	color: black;
@@ -29,3 +28,8 @@ p {	font-family: Arial;
 	padding-bottom: 25px;
 	margin: 30px;
 }
+#image {
+position: absolute;
+left: 100px;
+top: 400px;
+} 
