--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -27,6 +27,7 @@ p {	font-family: Arial;
 	padding-top: 25px;
 	padding-bottom: 25px;
 	margin: 30px;
+	width: 200px;
 }
 #image {
 position: absolute;
