--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -32,8 +32,7 @@ p {	font-family: Arial;
 li {
 	width: 600px;
 }
-#image {
-position: absolute;
-left: 100px;
-top: 400px;
+.image {
+float: left; 
+margin: 0 6px 6px 0;
 } 
