--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -32,7 +32,8 @@ p {	font-family: Arial;
 li {
 	width: 600px;
 }
-.image {
-float: left; 
-margin: 0 6px 6px 0;
-} 
+<style type="text/css">
+.image {float: left;
+margin: 0 6px 6px 0;}
+  </style>
+
