--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -35,3 +35,13 @@ li {
 .flotte {
 float:right;
 }
+#footer {
+	position: relative;
+	height: 50px;
+	background-color: #668284;
+	clear: both;
+	font-family: Verdana, sans-serif;
+	font-size: 14px;
+	text-align: center;
+	color: #ffffff;
+}
