--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,6 +1,15 @@
 body {
 	background-color: #efebdc
 }
+#header {
+	z-index: 1;
+	position: fixed;
+	width: 97.5%;
+	margin-top: -20px;
+	height: 60px;
+	background-color: #668284;
+	margin-bottom: 10px;
+}
 h1 {
 	font-family: Verdana;
 	font-weight: bold;
