--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,14 +3,12 @@ body {
 }
 #header {
 	position: relative;
-	width: 97.5%;
-	margin-top: -20px;
 	height: 80px;
 	background-color: #668284;
 	margin-bottom: 30px;
 	text-align: center;
 	font-family: Verdana, sans-serif;
-	display: inline;
+	clear: both;
 }
 h1 {
 	font-family: Verdana;
