--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -9,6 +9,8 @@ body {
 	text-align: center;
 	font-family: Verdana, sans-serif;
 	clear: both;
+	width: 97.5%;
+	margin-top: -20px;
 }
 h1 {
 	font-family: Verdana;
