--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -13,7 +13,7 @@ body {
 	margin-top: -20px;
 }
 
-#name h1{	font-family: Verdana;
+#name p{	font-family: Verdana;
 	font-weight: bold;
 	text-align: center;
 	padding-top: 25px;
