--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -12,8 +12,7 @@ body {
 	width: 97.5%;
 	margin-top: -20px;
 }
-
-#name p h1{
+ h1{
 	font-family: Verdana;
 	font-weight: bold;
 	text-align: center;
